mabger-meter/force-app/main/default/objects/Contact/fields/Account_Company_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Company_Number__c</fullName>
    <label>Account Company Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>