mabger-meter/force-app/main/default/objects/Contact/fields/Alumni_Associations__c.field-meta.xml
<CustomField>
    <fullName>Alumni_Associations__c</fullName>
    <label>Alumni Associations</label>
    <length>255</length>
    <type>Text</type>
</CustomField>