mabger-meter/force-app/main/default/objects/Contact/fields/Badger_Meter_Advanced__c.field-meta.xml
<CustomField>
    <fullName>Badger_Meter_Advanced__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to put in logic in the SSO string on the user record to append “, Badger Meter Advanced” to the end of the product groups if this box is checked</description>
    <label>Badger Meter Advanced</label>
    <type>Checkbox</type>
</CustomField>