mabger-meter/force-app/main/default/objects/Contact/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <formula>CASE(Account.Organization_Type__c, 
&quot;DC-Distributor Customer&quot;, &quot;Utility&quot;, 
&quot;ED-Encompass Program Distributor&quot;, &quot;Flow&quot;, 
&quot;FE-Flow End Customer&quot;,&quot;Flow&quot;, 
&quot;FM-Skid Manufacturer/OEM&quot;, &quot;Flow&quot;, 
&quot;HA-Flow House Account&quot;, &quot;Flow&quot;, 
&quot;IR-Flow Industrial/Commercial Rep&quot;, &quot;Flow&quot;, 
&quot;OD-Flow Open Distribution&quot;, &quot;Flow&quot;, 
&quot;TD-Turf Distributor&quot;, &quot;Flow&quot;, 
&quot;UC-Utility Customer&quot;, &quot;Utility&quot;, 
&quot;UD-Utility Distributor&quot;, &quot;Utility&quot;, 
&quot;UO-Utility Other&quot;, &quot;Utility&quot;, 
&quot;WD-WYCO Distributor&quot;, &quot;Flow&quot;, 
&quot;WE-WYCO End Customer/Contractor&quot;, &quot;Flow&quot;, 
&quot;WM-WYCO OEM&quot;, &quot;Flow&quot;, 
&quot;None&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Unit</label>
    <type>Text</type>
</CustomField>