mabger-meter/force-app/main/default/objects/Contact/fields/CAG_Member__c.field-meta.xml
<CustomField>
    <fullName>CAG_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Engage Member</label>
    <type>Checkbox</type>
</CustomField>