mabger-meter/force-app/main/default/objects/Contact/fields/CAG_Membership_Date__c.field-meta.xml
<CustomField>
    <fullName>CAG_Membership_Date__c</fullName>
    <label>Engage Membership Date</label>
    <type>Date</type>
</CustomField>