mabger-meter/force-app/main/default/objects/Contact/fields/CAG_Membership_Status__c.field-meta.xml
<CustomField>
    <fullName>CAG_Membership_Status__c</fullName>
    <label>Engage Membership Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Good Standing</fullName>
            </value>
            <value>
                <fullName>Probationary</fullName>
            </value>
            <value>
                <fullName>Revoked/Denied</fullName>
            </value>
            <value>
                <fullName>Opted Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>