mabger-meter/force-app/main/default/objects/Contact/fields/CERT__c.field-meta.xml
<CustomField>
    <fullName>CERT__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Designates that the Contact is to receive Certified Test Results</description>
    <inlineHelpText>Designates that the Contact is to receive Certified Test Results</inlineHelpText>
    <label>CERT</label>
    <type>Checkbox</type>
</CustomField>