mabger-meter/force-app/main/default/objects/Contact/fields/CERT_Content_Layout_1__c.field-meta.xml
<CustomField>
    <fullName>CERT_Content_Layout_1__c</fullName>
    <description>101 will create a STD CERT:
If customization is required, the Customer will select from the existing layouts or a new layout will be created The ID# will be used to designate the specific content and sequence the content on the CERT will be generated in.</description>
    <inlineHelpText>101 will create a STD CERT:
If customization is required, the Customer will select from the existing layouts or a new layout will be created The ID# will be used to designate the specific content and sequence the content on the CERT will be generated in.</inlineHelpText>
    <label>Content/Layout #1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>