mabger-meter/force-app/main/default/objects/Contact/fields/CERT_Content_Layout_2__c.field-meta.xml
<CustomField>
    <fullName>CERT_Content_Layout_2__c</fullName>
    <description>Typically used for providing S/N lists of Endpoints.

501 is the skinny version identifying Endpoint S/N and Encoder S/N, only.

502 is for the modified version including the Meter:Endpoint S/N, Meter S/N, Encoder S/N, only.</description>
    <inlineHelpText>Typically used for providing S/N lists of Endpoints.

501 is the skinny version identifying Endpoint S/N and Encoder S/N, only.

502 is for the modified version including the Meter:Endpoint S/N, Meter S/N, Encoder S/N, only.</inlineHelpText>
    <label>Content/Layout #2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>