mabger-meter/force-app/main/default/objects/Contact/fields/CERT_File_Type__c.field-meta.xml
<CustomField>
    <fullName>CERT_File_Type__c</fullName>
    <description>Select the desired CERT file type(s).  (You can select multiple file types)</description>
    <inlineHelpText>CSV=Comma Separated Value
PDF=Portable Document Format
XLSX=Excel open format</inlineHelpText>
    <label>CERT File Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CSV</fullName>
            </value>
            <value>
                <fullName>PDF</fullName>
            </value>
            <value>
                <fullName>XLSX</fullName>
            </value>
            <value>
                <fullName>WRI</fullName>
                <isActive>false</isActive>
                <label>WRI</label>
            </value>
            <value>
                <fullName>XML</fullName>
                <isActive>false</isActive>
                <label>XML</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>