mabger-meter/force-app/main/default/objects/Contact/fields/CERT_Shipto_1__c.field-meta.xml
<CustomField>
    <fullName>CERT_Shipto_1__c</fullName>
    <description>Shipto that will be candidates for the Contact to receive an email.</description>
    <inlineHelpText>Enter a Shipto number (leading 0) that you want to be a candidate for the Contact to receive an email.

Note:  If ALL Shiptos for the Account should be candidates for the Contact to receive an email, then ALL of the Shipto entries need to be cleared.</inlineHelpText>
    <label>CERT Shipto 1</label>
    <length>4</length>
    <type>Text</type>
</CustomField>