mabger-meter/force-app/main/default/objects/Contact/fields/CERT_Shipto_3__c.field-meta.xml
<CustomField>
    <fullName>CERT_Shipto_3__c</fullName>
    <description>Shipto that will candidates for the Contact to receive an email.</description>
    <inlineHelpText>Enter a Shipto number that you want to be a candidate for the Contact to receive an email.

Note:  If ALL Shiptos for the Account should be candidates for the Contact to receive an email, then ALL of the Shipto entries need to be cleared.</inlineHelpText>
    <label>CERT Shipto 3</label>
    <length>4</length>
    <type>Text</type>
</CustomField>