mabger-meter/force-app/main/default/objects/Contact/fields/CERT_WRI_Formats__c.field-meta.xml
<CustomField>
    <fullName>CERT_WRI_Formats__c</fullName>
    <description>Legacy WRI Formats - Expires Q4 2020</description>
    <inlineHelpText>Legacy WRI Formats - Expires Q4 2020</inlineHelpText>
    <label>CERT WRI Formats</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Standard/MRT</fullName>
            </value>
            <value>
                <fullName>2 Huntsville</fullName>
            </value>
            <value>
                <fullName>3 Philly/Itron</fullName>
            </value>
            <value>
                <fullName>4 Milwaukee FieldTech</fullName>
            </value>
            <value>
                <fullName>5 Houston</fullName>
            </value>
            <value>
                <fullName>6 Chicago</fullName>
            </value>
            <value>
                <fullName>8 Duke</fullName>
            </value>
            <value>
                <fullName>9 Custom</fullName>
            </value>
            <value>
                <fullName>10 Default CSV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>