mabger-meter/force-app/main/default/objects/Contact/fields/Community_User_Name__c.field-meta.xml
<CustomField>
    <fullName>Community_User_Name__c</fullName>
    <description>this field will display the community user&apos;s username if a match is found for the domain. This is used for the welcome email template for self-registered community users. For most users, will display email address. For badger meter users, &quot;badgermeter.com&quot; is replaced with &quot;bmiextranet.com&quot;.</description>
    <formula>if(Domain_Match_Found__c, SUBSTITUTE(Email,&quot;badgermeter.com&quot;, &quot;bmiextranet.com&quot;), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>this field will display the community user&apos;s username if a match is found for the domain. This is used for the welcome email template for self-registered community users. For most users, will display email address. For badger meter users, &quot;badgermeter.com</inlineHelpText>
    <label>Community User Name</label>
    <type>Text</type>
</CustomField>