mabger-meter/force-app/main/default/objects/Contact/fields/Competitors_ID__c.field-meta.xml
<CustomField>
    <fullName>Competitors_ID__c</fullName>
    <label>Competitors ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>