mabger-meter/force-app/main/default/objects/Contact/fields/Consent_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Consent_Last_Updated__c</fullName>
    <label>Consent Last Updated</label>
    <type>Date</type>
</CustomField>