mabger-meter/force-app/main/default/objects/Contact/fields/Consent_to_Processing__c.field-meta.xml
<CustomField>
    <fullName>Consent_to_Processing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consent to Processing</label>
    <type>Checkbox</type>
</CustomField>