mabger-meter/force-app/main/default/objects/Contact/fields/Contact_Status__c.field-meta.xml
<CustomField>
    <fullName>Contact_Status__c</fullName>
    <label>Contact Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contacted/In Process</fullName>
            </value>
            <value>
                <fullName>Needs Salesperson Input</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Quoted</fullName>
            </value>
            <value>
                <fullName>Request Fulfilled</fullName>
            </value>
            <value>
                <fullName>retired</fullName>
            </value>
            <value>
                <fullName>Return to Marketing</fullName>
            </value>
            <value>
                <fullName>Sent to Rep/Distributor</fullName>
            </value>
            <value>
                <fullName>Will Never Buy</fullName>
            </value>
            <value>
                <fullName>Converted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>