mabger-meter/force-app/main/default/objects/Contact/fields/Converted_from_lead__c.field-meta.xml
<CustomField>
    <fullName>Converted_from_lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Converted from lead</label>
    <type>Checkbox</type>
</CustomField>