mabger-meter/force-app/main/default/objects/Contact/fields/Currency_Id__c.field-meta.xml
<CustomField>
    <fullName>Currency_Id__c</fullName>
    <label>Currency Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>