mabger-meter/force-app/main/default/objects/Contact/fields/DISTInews_International__c.field-meta.xml
<CustomField>
    <fullName>DISTInews_International__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if this Contact should receive International DISTInews distributions.</inlineHelpText>
    <label>DISTInews - International</label>
    <type>Checkbox</type>
</CustomField>