mabger-meter/force-app/main/default/objects/Contact/fields/DM_C_External_ID__c.field-meta.xml
<CustomField>
    <fullName>DM_C_External_ID__c</fullName>
    <description>Holds the Pivotal Contact ID</description>
    <externalId>true</externalId>
    <label>DM C External ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>