mabger-meter/force-app/main/default/objects/Contact/fields/Do_Not_Survey__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check to prevent surveys from being sent.  Time based workflow rule will automatically uncheck the box.</description>
    <label>Do Not Survey</label>
    <type>Checkbox</type>
</CustomField>