mabger-meter/force-app/main/default/objects/Contact/fields/Domain__c.field-meta.xml
<CustomField>
    <fullName>Domain__c</fullName>
    <description>this will capture the domain portion of a users email address.  This is used to match new contacts created via community self registration to their correct accounts.</description>
    <formula>RIGHT(Email, len(Email) - FIND(&quot;@&quot;, Email, 1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>this will capture the domain portion of a users email address.  This is used to match new contacts created via community self registration to their correct accounts.</inlineHelpText>
    <label>Domain</label>
    <type>Text</type>
</CustomField>