mabger-meter/force-app/main/default/objects/Contact/fields/Domain_Match_Found__c.field-meta.xml
<CustomField>
    <fullName>Domain_Match_Found__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this field indicates a domain match was found when the contact self registered for access to the community / extranet.</description>
    <inlineHelpText>this field indicates a domain match was found when the contact self registered for access to the community / extranet.</inlineHelpText>
    <label>Domain Match Found</label>
    <type>Checkbox</type>
</CustomField>