mabger-meter/force-app/main/default/objects/Contact/fields/Dummy_Date__c.field-meta.xml
<CustomField>
    <fullName>Dummy_Date__c</fullName>
    <label>Dummy Date</label>
    <type>Date</type>
</CustomField>