mabger-meter/force-app/main/default/objects/Contact/fields/Dummy_Updates__c.field-meta.xml
<CustomField>
    <fullName>Dummy_Updates__c</fullName>
    <label>Dummy Updates</label>
    <length>100</length>
    <type>Text</type>
</CustomField>