mabger-meter/force-app/main/default/objects/Contact/fields/Eligibility_Date__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Date__c</fullName>
    <description>This date determines if the Contact is still eligible to receive emails.  This date can be used in other process to control eligibility for emailing reports and documents to the Contact.  It does not have to be used, each process will determine if it is appropriate.</description>
    <inlineHelpText>This date determines if the Contact is still eligible to receive emails.  

This date may be used in other processes to control eligibility for emailing reports and documents to the Contact.</inlineHelpText>
    <label>Eligibility Date</label>
    <type>Date</type>
</CustomField>