mabger-meter/force-app/main/default/objects/Contact/fields/Email_Copies__c.field-meta.xml
<CustomField>
    <fullName>Email_Copies__c</fullName>
    <description>List of Sales Credits.
Use leading zeros and separate by commas.
Ex: 005728,006742,042125</description>
    <inlineHelpText>Acknowledgment and Invoice COPIES to be mailed to this Contact for these Sales Credits.
Use leading zeros and separate by commas.  (UTILITY DISTRIBUTOR or FLOW REP Contacts ONLY!)</inlineHelpText>
    <label>Email Copies</label>
    <length>100</length>
    <type>Text</type>
</CustomField>