mabger-meter/force-app/main/default/objects/Contact/fields/Email_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Email_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Email Invoices to this Contact if this checkbox is checked.</description>
    <inlineHelpText>Email Invoices to this Contact if this checkbox is checked.</inlineHelpText>
    <label>Email Invoice</label>
    <type>Checkbox</type>
</CustomField>