mabger-meter/force-app/main/default/objects/Contact/fields/Email_Selections__c.field-meta.xml
<CustomField>
    <fullName>Email_Selections__c</fullName>
    <description>Selections determine whether the Contact will get emails for these reports and documents</description>
    <inlineHelpText>You can make multiple selections.

Note:
Backlog Report and Prior Day Shipments Report will send email regardless whether there is data.
Backlog Report (if data) and Prior Day Shipments Report (if data) will send an email ONLY if there is data.</inlineHelpText>
    <label>Email Selections</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acknowledgment</fullName>
            </value>
            <value>
                <fullName>Backlog Report</fullName>
            </value>
            <value>
                <fullName>Backlog Report (if data)</fullName>
            </value>
            <value>
                <fullName>Packing List</fullName>
            </value>
            <value>
                <fullName>Prior Day Shipments Report</fullName>
            </value>
            <value>
                <fullName>Prior Day Shipments Report (if data)</fullName>
            </value>
            <value>
                <fullName>AR statements</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>