mabger-meter/force-app/main/default/objects/Contact/fields/Email_Selections_COPIES__c.field-meta.xml
<CustomField>
    <fullName>Email_Selections_COPIES__c</fullName>
    <description>Select the Documents you want COPIES to be mailed to this Contact.
Used in conjunction with the Sales Credits specified in the Email Copies field. 
Note:  These are Email COPIES only, originals are still emailed via the Email Selections and Invoice checkbox.</description>
    <inlineHelpText>Select the Documents you want COPIES to be mailed to this Contact.
Used in conjunction with the Sales Credits specified in the Email Copies field. 
Note:  These are Email COPIES only, originals are emailed via the Email Selections and Invoice checkbox.</inlineHelpText>
    <label>Email Selections (COPIES)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acknowledgment</fullName>
            </value>
            <value>
                <fullName>Invoice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>