mabger-meter/force-app/main/default/objects/Contact/fields/eNews_Signup__c.field-meta.xml
<CustomField>
    <fullName>eNews_Signup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>eNews Signup</label>
    <type>Checkbox</type>
</CustomField>