mabger-meter/force-app/main/default/objects/Contact/fields/External_Company_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Company_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>External Company Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>