mabger-meter/force-app/main/default/objects/Contact/fields/Familiar_Name__c.field-meta.xml
<CustomField>
    <fullName>Familiar_Name__c</fullName>
    <label>Familiar Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>