mabger-meter/force-app/main/default/objects/Contact/fields/Flow_Concrete_Finishing__c.field-meta.xml
<CustomField>
    <fullName>Flow_Concrete_Finishing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flow - Concrete Finishing</label>
    <type>Checkbox</type>
</CustomField>