mabger-meter/force-app/main/default/objects/Contact/fields/Form_Comments_Contact__c.field-meta.xml
<CustomField>
    <fullName>Form_Comments_Contact__c</fullName>
    <description>Most recent comments from the Marketo form.</description>
    <inlineHelpText>Displays most recent Marketo form comments</inlineHelpText>
    <label>Form Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>