mabger-meter/force-app/main/default/objects/Contact/fields/Form_Comments_History_Contact__c.field-meta.xml
<CustomField>
    <fullName>Form_Comments_History_Contact__c</fullName>
    <description>Displays history of form comments from Marketo.</description>
    <label>Form Comments History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>