mabger-meter/force-app/main/default/objects/Contact/fields/Hidden_Email_Selections__c.field-meta.xml
<CustomField>
    <fullName>Hidden_Email_Selections__c</fullName>
    <formula>IF( INCLUDES(Email_Selections__c, &apos;Acknowledgment&apos;), &apos;Acknowledgment,&apos;, null) + 
IF( INCLUDES(Email_Selections__c, &apos;Backlog Report&apos;), &apos;Backlog Report  ,&apos;, null) + 
IF( INCLUDES(Email_Selections__c, &apos;Backlog Report (if data)&apos;), &apos;Backlog Report (if data),&apos;, null) + 
IF( INCLUDES(Email_Selections__c, &apos;CERT&apos;), &apos;CERT,&apos;, null) + 
IF( INCLUDES(Email_Selections__c, &apos;Packing List&apos;), &apos;Packing List,&apos;, null) + 
IF( INCLUDES(Email_Selections__c, &apos;Prior Day Shipments Report&apos;), &apos;Prior Day Shipments Report  ,&apos;, null) + 
IF( INCLUDES(Email_Selections__c, &apos;Prior Day Shipments Report (if data)&apos;), &apos;Prior Day Shipments Report (if data),&apos;, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hidden Email Selections</label>
    <type>Text</type>
</CustomField>