mabger-meter/force-app/main/default/objects/Contact/fields/Hidden_Email_Selections_COPIES__c.field-meta.xml
<CustomField>
    <fullName>Hidden_Email_Selections_COPIES__c</fullName>
    <formula>IF( INCLUDES(Email_Selections_COPIES__c, &apos;Acknowledgment&apos;), &apos;Acknowledgment,&apos;, null) + 
IF( INCLUDES(Email_Selections_COPIES__c, &apos;Invoice&apos;), &apos;Invoice,&apos;, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hidden Email Selections COPIES</label>
    <type>Text</type>
</CustomField>