mabger-meter/force-app/main/default/objects/Contact/fields/Hide_from_Marketo__c.field-meta.xml
<CustomField>
    <fullName>Hide_from_Marketo__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this field as true on the record of any contact that you want to hide from Marketo.</inlineHelpText>
    <label>Hide from Marketo</label>
    <type>Checkbox</type>
</CustomField>