mabger-meter/force-app/main/default/objects/Contact/fields/Include_Consolidation__c.field-meta.xml
<CustomField>
    <fullName>Include_Consolidation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include Consolidation</label>
    <type>Checkbox</type>
</CustomField>