mabger-meter/force-app/main/default/objects/Contact/fields/Industrial_eNews__c.field-meta.xml
<CustomField>
    <fullName>Industrial_eNews__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check box for a contact if record is to receive Industrial eNews distributions.</description>
    <inlineHelpText>Check this box if this Contact should receive Industrial eNews distributions.</inlineHelpText>
    <label>Industrial eNews</label>
    <type>Checkbox</type>
</CustomField>