mabger-meter/force-app/main/default/objects/Contact/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Automotive Aftermarket</fullName>
            </value>
            <value>
                <fullName>Aviation &amp; Aerospace</fullName>
            </value>
            <value>
                <fullName>Building Automation/HVAC</fullName>
            </value>
            <value>
                <fullName>Chemical</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Concrete Finishing</fullName>
            </value>
            <value>
                <fullName>Concrete Production</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>Irrigation</fullName>
            </value>
            <value>
                <fullName>Oil &amp; Gas</fullName>
            </value>
            <value>
                <fullName>Process Industries</fullName>
            </value>
            <value>
                <fullName>Refining &amp; Petrochemical</fullName>
            </value>
            <value>
                <fullName>Test &amp; Measurement</fullName>
            </value>
            <value>
                <fullName>Water/Wastewater Treatment</fullName>
            </value>
            <value>
                <fullName>Water Distribution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>